Стили главной страницы

--- a/client/client.html
+++ b/client/client.html
@@ -12,6 +12,7 @@
     </div>
 
     {{> Router}}
+    <div class="footer">Андрей Шахов, ВКУиНТ, 2015 &copy;</div>
 </div>
 </body>
 
@@ -35,7 +36,6 @@
 
 <template name="index">
 <div class="index">
-    Index page
-    <a href="/list">List</a>
+    Добро пожаловать на сайт-каталог загородного отдыха Волгограда! На нашем сайте Вы сможете подобрать оптимальный вариант отдыха для себя и своей семьи!
 </div>
 </template>
