--- a/client/client.html
+++ b/client/client.html
@@ -47,8 +47,13 @@
     </div>
     <div class="text">{{full_text}}</div>
     <img src="/{{img}}" class="img">
-    
-   
+    <div class="info">
+        <span>Растоние до поселка: {{city_dist}} км</span>
+        <span>Расстоние до водоема: {{water_dist}} км</span>
+        <span>Объем водоема: {{water}} кб.м.</span>
+        <span>Класс водоема: {{water_class}}</span>
+        <span>Цена: {{price}} руб.</span>
+    </div>
 </div>
 </template>
 
